<resources>
    <string name="app_name">Simple Aircraft War</string>
    <string name="solo_difficulty_easy">Easy mode</string>
    <string name="solo_difficulty_moderate">Moderate mode</string>
    <string name="solo_difficulty_hard">Hard mode</string>
    <string name="solo_game_start">Start Singleplayer Game!</string>
    <string name="multi_server_address">Server address</string>
    <string name="multi_user_name">User name</string>
    <string name="multi_user_password">Password</string>
    <string name="multi_game_start">Start Multiplayer Game!</string>
    <string name="seal_of_hans">Seal of Hans!</string>
    <string name="audio_switch">Sound</string>
    <string name="game_over_hint">Game Over!</string>
    <string name="enroll">Enroll</string>
    <string name="enroll_cancel">Cancel</string>
    <string name="room_list">Choose a Room…</string>
    <string name="room_id">Room ID: </string>
    <string name="difficulty">Difficulty: </string>
    <string name="your_room_id">Your Room ID is</string>
    <string name="waiting">Waiting for teammate…</string>
    <string name="hero_score">Your Score</string>
    <string name="friend_score">Your Teammate\'s Score</string>
    <string name="multi_ranking_username">Player\'s name</string>
    <string name="enroll_date">Enroll date</string>
</resources>