<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WelcomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/soloCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/soloLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioGroup
                        android:id="@+id/soloDifficultyGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:checkedButton="@+id/soloEasyMode"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/soloEasyMode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/solo_difficulty_easy"
                            tools:ignore="UsingOnClickInXml" />

                        <RadioButton
                            android:id="@+id/soloModerateMode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/solo_difficulty_moderate"
                            tools:ignore="UsingOnClickInXml" />

                        <RadioButton
                            android:id="@+id/soloHardMode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/solo_difficulty_hard"
                            tools:ignore="UsingOnClickInXml" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/soloStartGame"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="startSoloGame"
                        android:text="@string/solo_game_start"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/soloDifficultyGroup" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/multiCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/soloCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/multiLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/multiServerAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:hint="@string/multi_server_address"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/multiUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:hint="@string/multi_user_name"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/multiServerAddress" />

                    <EditText
                        android:id="@+id/multiPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:hint="@string/multi_user_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/multiUserName" />

                    <Button
                        android:id="@+id/multiStartGame"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="startMultiGame"
                        android:text="@string/multi_game_start"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/multiPassword" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/sealOfHans"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/seal_of_hans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/multiCard"
                app:srcCompat="@drawable/ic_seal_of_hans" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>